# gin-study

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
api/: BUILD.bazel  api.bak_proto  api.proto
big_file/: BUILD.bazel  chunk.go
