load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "study_test_bazel_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "study_test_bazel_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/xlkness/gin-study/api",
    proto = ":study_test_bazel_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "api",
    embed = [":study_test_bazel_go_proto"],
    importpath = "github.com/xlkness/gin-study/api",
    visibility = ["//visibility:public"],
)
